# git_record

./: .gitignore  .pdm-python  README.md  pyproject.toml  setup.py  tasks.py
example/: ex1.py  ex2.py
git_record/: git_record.py
src/git_record/: git_record.py
